# BlockGL

./: .gitignore  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/linmath/include/: linmath.h
src/: blockgl.h  main.c
